# covert-action-engine

./: .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  RANDOM.md  README.md  REFERENCES.md  TODO.md  TODO2.md  caecode.css  dox.cfg  random.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  quick-bug-report.md  request-documentation.md
Modex/: MAKEFILE  MXPT.ASM
content/: ambush.md  crime.md  debrief.md  gfx-generation.md  plot.md  theaters.md  wiretaps.md
doc/: README.md
re/: PROCESS.md
ref/Modex/: MODEX.DEF
src/: .covert.cpp.swp  Makefile  activity.h  case.h  casegenerator.cpp  casegenerator.h  combat.cpp  combat.h  covert.cpp  covert.h  cryptography.cpp  cryptography.h  driving.cpp  driving.h  electronics.cpp  electronics.h  font  main.cpp  menu.h  out  render.h  types.h  wave_gen.sh
src-mpgl/: ledes.md  unified.c
src/disk/: loadsave.cpp  loadsave.h
src/gameplay/: .gamestate.cpp.swp  agentgenerator.cpp  agentgenerator.h  basegenerator.h  bgtest.cpp  case.cpp  case.h  casegenerator.h  discover.h  gamestate.cpp  gamestate.h  mainchar.h  setup.cpp
src/gfx/: gfx.h  picloader.cpp  picloader.h
src/gui/: .gui.cpp.swp  .gui.h.swp  font.cpp  font.h  gui.cpp  gui.h  menu.cpp  menu.h  point.cpp  point.h
src/minigame/: combat.cpp  combat.h  cryptography.cpp  cryptography.h  driving.cpp  driving.h  electronics.cpp  electronics.h  minigame.h
src/sound/: CMakeLists.txt  Makefile  README.md  fx.cpp  fx.h  lisyarus.cpp  lisyarus.h  music.cpp  music.h  sound.h  test.cpp
src/sound/include/psemek/audio/: channel.hpp  duplicate.hpp  duration.hpp  engine.hpp  mixer.hpp  oscillator.hpp  recorder.hpp  resampler.hpp  smooth.hpp  stereo.hpp  track.hpp
src/sound/include/psemek/audio/effect/: compressor.hpp  distortion.hpp  fade_in.hpp  fade_out.hpp  loop.hpp  pause.hpp  pitch.hpp  truncate.hpp  volume.hpp  volume_base.hpp
src/sound/include/psemek/audio/wave/: generator.hpp  karplus_strong.hpp  sawtooth.hpp  silence.hpp  sine.hpp  square.hpp  triangle.hpp
src/sound/source/: duplicate.cpp  engine.cpp  mixer.cpp  recorder.cpp  resampler.cpp  stereo.cpp  track_mp3.cpp  track_raw.cpp  track_wav.cpp
src/sound/source/effect/: compressor.cpp  distortion.cpp  fade_in.cpp  fade_out.cpp  loop.cpp  pause.cpp  pitch.cpp  truncate.cpp  volume.cpp  volume_base.cpp
src/sound/source/minimp3/: minimp3.c
src/sound/source/wave/: karplus_strong.cpp  sawtooth.cpp  silence.cpp  sine.cpp  square.cpp  triangle.cpp
test/: CMakeLists.txt  TESTTODO.md  test.cpp  todo.md
tools/: decompress.py  pic_decode.c
